--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,8 +1,8 @@
 #MySQL properties
-db.driver= "YOUR DRIVER"
-db.url= "YOUR URL"
-db.user= "YOUR LOGIN"
-db.password= "YOUR PASSWORD"
+db.driver=com.mysql.cj.jdbc.Driver
+db.url=jdbc:mysql://localhost/ticket_app?serverTimezone=UTC
+db.user=root
+db.password=0660106493
 
 #Hibernate properties
 hibernate.show_sql=true
